lang/tests/compile_fail/multiple_field_errors.stderr
error: `realloc` requires a program account (`Account<T>` or `InterfaceAccount<T>`); `Signer` cannot be reallocated
  --> tests/compile_fail/multiple_field_errors.rs:20:5
   |
20 | /     #[account(mut, realloc = 64)]
21 | |     pub sig: Signer,
   | |___________________^

error: init(...) cannot be used on Option<T> fields
  --> tests/compile_fail/multiple_field_errors.rs:24:5
   |
24 | /     #[account(init, payer = payer)]
25 | |     pub maybe: Option<Account<Data>>,
   | |____________________________________^

error: #[account(dup)] requires a /// CHECK: <reason> doc comment
  --> tests/compile_fail/multiple_field_errors.rs:28:5
   |
28 | /     #[account(dup)]
29 | |     pub aliased: UncheckedAccount,
   | |_________________________________^
